--- a/sandbox_moorhead/style.css
+++ b/sandbox_moorhead/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("./img/background.jpg") no-repeat center fixed;
+    background: url("./img/cloudsBackground.jpg") no-repeat center fixed;
     background-size: cover;
 }
 .ground{
