--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@ html, body {
 canvas {
   display: block;
 }
+body{
+  background: url("./img/cloudsBackground.jpg") no-repeat center fixed;
+  background-size: cover;
+}
