--- a/title.css
+++ b/title.css
@@ -9,8 +9,8 @@ h1 {
     height: 20vh;
     justify-content: center;
     align-items: center;
-    background-color: #8D8B83;
-    border: 4px solid maroon;
+    background-color: #8C8A87;
+    border: 6px solid maroon;
     border-radius: 2rem;
     
 }
@@ -27,5 +27,10 @@ button {
     padding: 4px;
     border: 3px solid black;
     border-radius: .5rem;
-    
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+    border: 3px solid white;
 }
