Slightly crop background img

--- a/title.css
+++ b/title.css
@@ -10,8 +10,9 @@ body {
 .page-container{
     display:flex;
     flex-direction: column;
-    margin: 22%;
+    margin: 21%;
     height: 20vh;
+    width: 50vw;
     justify-content: center;
     align-items: center;
     background-color: #8C8A87;
