--- a/title.css
+++ b/title.css
@@ -18,13 +18,10 @@ body {
     background-color: #8C8A87;
     border: 6px solid maroon;
     border-radius: 2rem;
+    overflow-wrap: break-word;
 }
 
 .game {
-    width: max-content;
-}
-
-.title {
     width: max-content;
 }
 
