--- a/level_selection.css
+++ b/level_selection.css
@@ -6,6 +6,7 @@ h1 {
 a {
     background-color: white;
     border: 3px solid black;
+    color: maroon;
     border-radius: .5rem;
     text-decoration: none;
     padding: 5px;
